--- a/app/src/main/res/layout/activity_user_wallet.xml
+++ b/app/src/main/res/layout/activity_user_wallet.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,4 +7,80 @@
         android:layout_height="match_parent"
         tools:context=".views.ui.activities.UserWallet">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        layout="@layout/wallets_collapsing"
+        android:layout_height="200dp"
+        android:layout_width="match_parent"
+    />
+
+    <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <Button
+                    android:text="ADD MONEY"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnAddMoney"
+                    android:background="@drawable/add_money_background"
+                    android:padding="10dp"
+                    android:layout_margin="50dp"
+                    android:textColor="@color/blue"
+                    app:layout_constraintTop_toBottomOf="@+id/textView27" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView27"
+                    style="@style/title"
+                    app:layout_constraintTop_toBottomOf="@+id/textView25"
+                    app:layout_constraintStart_toEndOf="@+id/imageView10" android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"/>
+            <TextView
+                    android:text="Balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:id="@+id/textView25"
+                    app:layout_constraintTop_toTopOf="@+id/imageView10"
+                    app:layout_constraintStart_toEndOf="@+id/imageView10" android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@mipmap/bank" android:id="@+id/imageView10"
+                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView8"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/title"
+                    android:id="@+id/textView24"
+                    app:layout_constraintTop_toBottomOf="@+id/textView20"
+                    app:layout_constraintStart_toEndOf="@+id/imageView8" android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"/>
+            <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp" app:srcCompat="@mipmap/smartphone"
+                    android:id="@+id/imageView8" android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
+            <TextView
+                    android:text="Phone Number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/normal"
+                    android:id="@+id/textView20" android:layout_marginTop="24dp"
+                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView8"
+                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
