--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="start_app_dialog">#360033</color>
     <color name="end_app_dialog">#0b8793</color>
     <color name="white">#ffffff</color>
+    <color name="blue">#0000FF</color>
 </resources>
