--- a/app/src/main/res/layout/dialog_pubg_id.xml
+++ b/app/src/main/res/layout/dialog_pubg_id.xml
@@ -5,8 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/dialog_background"
-        android:layout_margin="10dp"
->
+        android:layout_margin="10dp">
 
     <TextView
             android:text="PUBG ID"
@@ -49,7 +48,7 @@
         />
     </com.google.android.material.textfield.TextInputLayout>
     <Button
-            android:text="Set id"
+            android:text="CONFIRM"
             style="@style/button"
             android:background="@drawable/dialog_button"
             android:layout_width="wrap_content"
@@ -60,6 +59,41 @@
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+            android:text=""
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvEarlierAmt"
+            style="@style/normal"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView28" android:layout_marginTop="4dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+    <TextView
+            android:text=""
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvFinal"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/tvEarlierAmt" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/btnAddPubgId"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView28"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="4dp"/>
+    <TextView
+            android:text="Wallet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView28"
+            style="@style/title"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout9" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
