--- a/app/src/main/res/layout/activity_add_money.xml
+++ b/app/src/main/res/layout/activity_add_money.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.ui.activities.AddMoney">
+        tools:context=".views.ui.activities.player.AddMoney">
 
     <include
             layout="@layout/wallets_collapsing"
