--- a/app/src/main/res/layout/activity_admin_add_room.xml
+++ b/app/src/main/res/layout/activity_admin_add_room.xml
@@ -14,6 +14,14 @@
           android:layout_height="match_parent"
           app:layout_behavior="@string/appbar_scrolling_view_behavior"
   >
+    <Button
+            android:id="@+id/btnResults"
+            android:text="View Results"
+            style="@style/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,14 +33,14 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="0dp"
+            android:layout_width="408dp"
             android:layout_height="0dp"
             tools:listitem="@layout/tourny_item"
             android:id="@+id/rvTournaments"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnResults">
 
     </androidx.recyclerview.widget.RecyclerView>
   </androidx.constraintlayout.widget.ConstraintLayout>
