--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@mipmap/pubg"
-        tools:context=".views.ui.activities.Login">
+        tools:context=".views.ui.activities.player.Login">
 
     <ImageView
             android:layout_width="match_parent"
