--- a/app/src/main/res/layout/activity_player_actvity.xml
+++ b/app/src/main/res/layout/activity_player_actvity.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/drawer"
-        tools:context=".views.ui.activities.PlayerActvity">
+        tools:context=".views.ui.activities.player.PlayerActvity">
 
   <androidx.coordinatorlayout.widget.CoordinatorLayout
           android:layout_width="match_parent"
