--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.ui.activities.Splash">
+        tools:context=".views.ui.activities.player.Splash">
 
     <ImageView android:layout_width="match_parent" android:layout_height="match_parent"
                android:src="@mipmap/splash"
