--- a/app/src/main/res/layout/activity_user_wallet.xml
+++ b/app/src/main/res/layout/activity_user_wallet.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".views.ui.activities.UserWallet">
+        tools:context=".views.ui.activities.player.UserWallet">
 
     <include
         layout="@layout/wallets_collapsing"
