--- a/app/src/main/res/layout/activity_user_wallet.xml
+++ b/app/src/main/res/layout/activity_user_wallet.xml
@@ -32,10 +32,11 @@
                     android:padding="10dp"
                     android:layout_margin="50dp"
                     android:textColor="@color/blue"
-                    app:layout_constraintTop_toBottomOf="@+id/tvBalance" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btnWithdraw"/>
             <TextView
                     android:text=""
                     android:layout_width="wrap_content"
@@ -93,10 +94,43 @@
                     android:textStyle="normal"
                     app:layout_collapseMode="parallax"
                     android:id="@+id/tvTransactions"
-                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/textView20"
-                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>
+                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
+                    app:layout_constraintTop_toTopOf="@+id/imageView8"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView8"/>
+            <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="30dp" app:srcCompat="@mipmap/right_arrow"
+                    android:id="@+id/imageView12"
+                    app:layout_constraintTop_toTopOf="@+id/imageView10"
+                    app:layout_constraintBottom_toBottomOf="@+id/imageView10"
+                    app:layout_constraintStart_toEndOf="@+id/textView25" android:layout_marginLeft="32dp"
+                    android:layout_marginStart="32dp"/>
+            <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:hint="Inr"
+                    android:ems="10"
+                    android:background="@drawable/et_background"
+                    android:padding="8dp"
+                    android:id="@+id/etWithdrawAmt" app:layout_constraintStart_toEndOf="@+id/imageView12"
+                    android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
+                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    app:layout_constraintTop_toTopOf="@+id/textView25"/>
+            <Button
+                    android:text="Withdraw"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnWithdraw"
+                    style="@style/button"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/etWithdrawAmt"
+                    app:layout_constraintStart_toStartOf="@+id/etWithdrawAmt" android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
