--- a/app/src/main/res/layout/activity_user_wallet.xml
+++ b/app/src/main/res/layout/activity_user_wallet.xml
@@ -11,8 +11,7 @@
             android:id="@+id/included"
             layout="@layout/wallets_collapsing"
             android:layout_height="200dp"
-            android:layout_width="match_parent"
-    />
+            android:layout_width="match_parent"/>
 
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -131,6 +130,17 @@
                     app:layout_constraintStart_toStartOf="@+id/etWithdrawAmt" android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+            <TextView
+                    android:text="TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@mipmap/processing"
+                    android:textColor="@color/green"
+                    android:drawablePadding="6dp"
+                    style="@style/title"
+                    android:id="@+id/tvAmtProcessing" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/btnWithdraw"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
