--- a/app/src/main/res/layout/activity_admin_add_room.xml
+++ b/app/src/main/res/layout/activity_admin_add_room.xml
@@ -12,16 +12,17 @@
   <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          app:layout_behavior="@string/appbar_scrolling_view_behavior"
-  >
+          app:layout_behavior="@string/appbar_scrolling_view_behavior">
     <Button
             android:id="@+id/btnResults"
             android:text="View Results"
             style="@style/button"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintStart_toEndOf="@+id/btnViewWtithDraws" android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.5"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,6 +44,15 @@
             app:layout_constraintTop_toBottomOf="@+id/btnResults">
 
     </androidx.recyclerview.widget.RecyclerView>
+    <Button
+            android:text="View Withdraws"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/button"
+            android:id="@+id/btnViewWtithDraws" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/btnResults"/>
   </androidx.constraintlayout.widget.ConstraintLayout>
 
   <View
